--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <body>
 
 <header>
-  <h1>Repositorio de Recursos Educativos Digitales</h1>
+  <h1>Repositorio de Recursos Educativos Digitales para Beatriz</h1>
   <button>Iniciar sesión</button>
 </header>
 
